{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 509,
  "lineage": "0a380468-c533-1d3a-3ddb-9e5145de091e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nv_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900324845409:internet-gateway/igw-09b0e7f14e4f55f92",
            "id": "igw-09b0e7f14e4f55f92",
            "owner_id": "900324845409",
            "tags": {
              "Name": "nv_igw"
            },
            "tags_all": {
              "Name": "nv_igw"
            },
            "vpc_id": "vpc-0f9aa77eac584c3a6"
          },
          "dependencies": [
            "aws_vpc.nv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nv_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:900324845409:loadbalancer/app/my-alb/b23d8655eb695840",
            "arn_suffix": "app/my-alb/b23d8655eb695840",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-alb-642433983.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:900324845409:loadbalancer/app/my-alb/b23d8655eb695840",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-011790746d2892a2e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-001a5dd26c3fdd5b3"
              },
              {
                "subnet_id": "subnet-0f9c008faf138051d"
              }
            ],
            "subnets": [
              "subnet-001a5dd26c3fdd5b3",
              "subnet-0f9c008faf138051d"
            ],
            "tags": {
              "Name": "my-alb"
            },
            "tags_all": {
              "Name": "my-alb"
            },
            "vpc_id": "vpc-0f9aa77eac584c3a6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.nv_sg",
            "aws_subnet.pub_sub1",
            "aws_subnet.pub_sub2",
            "aws_vpc.nv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nv_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:900324845409:listener/app/my-alb/b23d8655eb695840/1494cc12c98368e5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:900324845409:targetgroup/nv-tg/1c5521963fc9e7b3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:900324845409:listener/app/my-alb/b23d8655eb695840/1494cc12c98368e5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:900324845409:loadbalancer/app/my-alb/b23d8655eb695840",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nv_alb",
            "aws_lb_target_group.nv-tg",
            "aws_security_group.nv_sg",
            "aws_subnet.pub_sub1",
            "aws_subnet.pub_sub2",
            "aws_vpc.nv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nv-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:900324845409:targetgroup/nv-tg/1c5521963fc9e7b3",
            "arn_suffix": "targetgroup/nv-tg/1c5521963fc9e7b3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:900324845409:targetgroup/nv-tg/1c5521963fc9e7b3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:900324845409:loadbalancer/app/my-alb/b23d8655eb695840"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nv-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f9aa77eac584c3a6"
          },
          "dependencies": [
            "aws_vpc.nv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900324845409:route-table/rtb-02651e77d46dc4758",
            "id": "rtb-02651e77d46dc4758",
            "owner_id": "900324845409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09b0e7f14e4f55f92",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub_rt"
            },
            "tags_all": {
              "Name": "pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9aa77eac584c3a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.nv_igw",
            "aws_vpc.nv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063c7ebc64e9598aa",
            "route_table_id": "rtb-02651e77d46dc4758",
            "subnet_id": "subnet-001a5dd26c3fdd5b3"
          },
          "dependencies": [
            "aws_internet_gateway.nv_igw",
            "aws_route_table.pub_rt",
            "aws_subnet.pub_sub1",
            "aws_vpc.nv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f26af1327c366d78",
            "route_table_id": "rtb-02651e77d46dc4758",
            "subnet_id": "subnet-0f9c008faf138051d"
          },
          "dependencies": [
            "aws_internet_gateway.nv_igw",
            "aws_route_table.pub_rt",
            "aws_subnet.pub_sub2",
            "aws_vpc.nv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nv_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900324845409:security-group/sg-011790746d2892a2e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011790746d2892a2e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nv_vpc_sg",
            "name_prefix": "",
            "owner_id": "900324845409",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nv_sg"
            },
            "tags_all": {
              "Name": "nv_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9aa77eac584c3a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900324845409:subnet/subnet-001a5dd26c3fdd5b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001a5dd26c3fdd5b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "900324845409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_sub1"
            },
            "tags_all": {
              "Name": "pub_sub1"
            },
            "vpc_id": "vpc-0f9aa77eac584c3a6"
          },
          "dependencies": [
            "aws_vpc.nv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900324845409:subnet/subnet-0f9c008faf138051d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9c008faf138051d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "900324845409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_sub2"
            },
            "tags_all": {
              "Name": "pub_sub2"
            },
            "vpc_id": "vpc-0f9aa77eac584c3a6"
          },
          "dependencies": [
            "aws_vpc.nv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nv_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900324845409:vpc/vpc-0f9aa77eac584c3a6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0724e490df15c143e",
            "default_route_table_id": "rtb-01a5b0bb34c99c590",
            "default_security_group_id": "sg-07c1f36e7ec5204e6",
            "dhcp_options_id": "dopt-0d6f559a1ef75c264",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f9aa77eac584c3a6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01a5b0bb34c99c590",
            "owner_id": "900324845409",
            "tags": {
              "Name": "nv_vpc"
            },
            "tags_all": {
              "Name": "nv_vpc"
            }
          }
        }
      ]
    }
  ]
}